--- a/src/Pages/login.css
+++ b/src/Pages/login.css
@@ -1,5 +1,5 @@
 .formContainer{
-   background-color: #a7bcff; 
+   background-color: #cdd8fb; 
    height: 100vh;
    display: flex;
   align-items: center;
@@ -7,12 +7,12 @@
 }
 
  .formWrapper{
-  background-color: #acffff;
-  padding:20px 60px;
+  background-color: white;
+  padding:20px 30px;
    border-radius:10px;
    display:flex;
    flex-direction:column;
-   gap: 10px;
+   gap: 5px;
    align-items: center;
    justify-content: center; 
  
@@ -21,12 +21,13 @@ form{
   display:flex;
   flex-direction:column;
   gap: 15px;
+  
 }
   .logo{
-    background-color: rgb(152, 240, 11);
-    font-size: 3rem;
+    
+    font-size: 2rem;
     font-weight: bolder;
-    color: green;
+    color: #09f1f1;
   }
   .title{
     
