--- a/src/Pages/style.css
+++ b/src/Pages/style.css
@@ -4,6 +4,8 @@
    display: flex;
   align-items: center;
   justify-content: center; 
+  
+  
 }
 
  .formWrapper{
@@ -23,7 +25,7 @@ form{
   gap: 15px;
 }
   .logo{
-    background-color: rgb(152, 240, 11);
+    
     font-size: 3rem;
     font-weight: bolder;
     color: green;
@@ -33,4 +35,17 @@ form{
     font-style:italic;
     font-weight:bolder;
     color: blue;
+  }
+  
+  
+  button{
+    border-radius:10px;
+    padding: 6px;
+    border: 3px red;
+    align-items: center;
+    justify-content: center; 
+    display:flex;
+    font-weight:bolder;
+    color: rgb(224, 224, 240);
+    background-color: blue;
   }
