--- a/src/Style.scss
+++ b/src/Style.scss
@@ -13,25 +13,132 @@
       @content;
     }
   }
+  .footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .login{
+    background-color: white;
+    
+  }
+ .heading{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+ 
+ }
+ .signUpHeading{
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ 
+}
+.signupFormContainer {
+    
+  height: 100vh;
+  margin-top: 15px;
+  display: flex;
+  
+  justify-content: center;
+
+  .signupFormWrapper {
+    
+     
+      
+    padding: 20px 60px;
+    border-radius: 10px;
+    border: 1px solid #0890f8ee;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    height: 70vh;
+
+    .logo {
+      color: #0890f8ee;
+      font-weight: bold;
+      font-size: 24px;
+
+    }
+
+    .title {
+      color: #0890f8ee;
+      font-size: 20px;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+
+      input {
+        padding: 15px;
+        border: none;
+        width: 250px;
+        border-bottom: 1px solid #0890f8ee;
+        &::placeholder {
+          color: rgb(175, 175, 175);
+        }
+      }
+
+      button {
+        background-color: #0890f8ee;
+        color: white;
+        padding: 10px;
+        font-weight: bold;
+        border: none;
+        cursor: pointer;
+        
+      }
+      
+
+      label {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: #0890f8ee;
+        font-size: 12px;
+        cursor: pointer;
+
+        img {
+          width: 32px;
+        }
+      }
+    }
+    p {
+      color: #0968b0ee;
+      font-size: 16px;
+      margin-top: 10px;
+    }
+  }
+
+}
+
   
   .formContainer {
-    background-color: #60baffee;
-    height: 100vh;
+    
+    height: 65vh;
+    margin-top: 15px;
     display: flex;
-    align-items: center;
     justify-content: center;
-  
+
     .formWrapper {
-      background-color: white;
+    
+     
+      
       padding: 20px 60px;
       border-radius: 10px;
+      border: 1px solid #0890f8ee;
       display: flex;
       flex-direction: column;
       gap: 10px;
       align-items: center;
+      height: 48vh;
   
       .logo {
-        color: #60baffee;
+        color: #0890f8ee;
         font-weight: bold;
         font-size: 24px;
   
@@ -51,26 +158,28 @@
           padding: 15px;
           border: none;
           width: 250px;
-          border-bottom: 1px solid #60baffee;
+          border-bottom: 1px solid #0890f8ee;
           &::placeholder {
             color: rgb(175, 175, 175);
           }
         }
   
         button {
-          background-color: #60baffee;
+          background-color: #0890f8ee;
           color: white;
           padding: 10px;
           font-weight: bold;
           border: none;
           cursor: pointer;
+          
         }
+        
   
         label {
           display: flex;
           align-items: center;
           gap: 10px;
-          color: #60baffee;
+          color: #0890f8ee;
           font-size: 12px;
           cursor: pointer;
   
@@ -81,7 +190,7 @@
       }
       p {
         color: #0968b0ee;
-        font-size: 12px;
+        font-size: 16px;
         margin-top: 10px;
       }
     }
@@ -121,6 +230,7 @@
   
           .logo {
             font-weight: bold;
+            font-size: 18px;
             @include tablet {
               display: none;
             }
@@ -135,13 +245,14 @@
               height: 24px;
               width: 24px;
               border-radius: 50%;
+              border: 2px solid gray;
               object-fit: cover;
             }
   
             button {
-              background-color: #1176c3ee;
-              color: #ddddf7;
-              font-size: 10px;
+              background-color: #9a072aee;
+              color: white;
+              font-size: 12px;
               border: none;
               
              
@@ -164,6 +275,7 @@
               border: none;
               color: white;
               outline: none;
+              
   
               &::placeholder {
                 color: lightgray;
@@ -205,6 +317,12 @@
       }
       .chat {
         flex: 2;
+        .userPP{
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          
+        }
   
         .chatInfo {
           height: 50px;
@@ -212,9 +330,21 @@
           display: flex;
           align-items: center;
           justify-content: space-between;
+          
           padding: 10px;
           color: lightgray;
+          font-size: 20px;
+          font-weight: 500;
+          .pp {
+            background-color: #ddddf7;
+            height: 24px;
+            width: 24px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+         
         }
+      
   
         .chatIcons {
           display: flex;
@@ -299,7 +429,7 @@
             font-size: 18px;
   
             &::placeholder {
-              color: lightgray;
+              color: rgb(145, 139, 139);
             }
           }
   
